# routes/index.js
@@ -1,16 +1,17 @@
 const express = require('express');
 const router = express.Router();
 
-// Swagger documentation route
-router.use('/api-docs', require('./swagger'));
+router.use('/api-docs', require('./swagger')); // ✅ Swagger UI
 
-// Root route
+const userRoutes = require('./users');
+const productRoutes = require('./products');
+
 router.get('/', (req, res) => {
-  // #swagger.tags = ['Hello World']
   res.send('🚀 Welcome to your CSE341 API!');
 });
 
-// Users route
-router.use('/users', require('./users'));
+router.use('/users', userRoutes);
+router.use('/products', productRoutes);
 
 module.exports = router;
+
